--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
-== はじめてのチャレンジ
+== はじめてチャレンジ
 
-* はじめてのチャレンジウェブアプリケーション
+* はじめてチャレンジウェブアプリケーション
 
-
-<tt>cap deploy</tt>.
+* MySQLで開発していましたが、明らかにRDBでは処理が追いつかなそうなので、MongoDBを導入します。
+* それによって、Railsのバージョンも4.0.0.rc1にアップデートします。
